# Fenrir

./: .gitignore  CMakeLists.txt
include/: assert.h  attack_table.h  bit.h  bitboard.h  board.h  castling.h  decoded_move.h  direction.h  encoded_move.h  fenrir_assert.h  iterator.h  king.h  knight.h  masks.h  move_gen.h  move_parse.h  move_types.h  pawn.h  set_bit_iterator.h  sliding_piece.h  subset_iterator.h  types.h  utility.h
src/: attack_table.cpp  bitboard.cpp  board.cpp  castling.cpp  decoded_move.cpp  encoded_move.cpp  main.cpp  move_gen.cpp  move_parse.cpp  sliding_piece.cpp  utility.cpp
src/perft/: bench.cpp  perftree_runner.sh  run_perft.cpp
test/: CMakeLists.txt  test_bitboard.cpp  test_board.cpp  test_castling.cpp  test_helpers.h  test_iterator.cpp  test_king.cpp  test_knight.cpp  test_move_gen.cpp  test_move_parse.cpp  test_pawn.cpp  test_set_bit_iterator.cpp  test_sliding_piece.cpp  test_subset_iterator.cpp  test_utility.cpp  test_utility.h
